<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Картинка -->
    <ImageView
        android:id="@+id/media_image"
        android:src="@drawable/cat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:contentDescription="@string/media_image_description"/>

    <!-- Поле ввода -->
    <EditText
        android:id="@+id/media_title"
        android:hint="@string/media_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/media_image"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"/>

    <!-- Текст -->
    <TextView
        android:id="@+id/media_description"
        android:text="@string/media_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/media_title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <!-- Кнопка "Добавить" -->
    <Button
        android:id="@+id/add_button"
        android:text="@string/add_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

</RelativeLayout>